--- a/escom-bpm-web/src/main/webapp/view/templ/templ-service.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-service.xhtml
@@ -107,6 +107,7 @@
                 </p:panelGrid>
             </h:form>
         </p:dialog>
+        <ui:include src="/view/common/wait-dlg.xhtml"/> 
         <ui:insert name="dialogsAdd"></ui:insert>
     </ui:define>
 
