--- a/escom-bpm-web/src/main/webapp/view/services/mail/reader-service.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/mail/reader-service.xhtml
@@ -66,7 +66,7 @@
             <p:commandButton icon="ui-icon-check"
                         value="#{bundle.Test}" title="#{bundle.CheckConnect}"
                         actionListener="#{mailReaderBean.onCheckConnect()}"
-                        update="mainFRM:eastFRM">
+                        update="mainFRM:centerFRM mainFRM:eastFRM">
                 <f:param name="isRequired" value="true"/>
             </p:commandButton>
         </h:panelGrid>           
